apps/torrent/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-rtorrentvpn
spec:
  ports:
    - name: "9080"
      port: 9080
      targetPort: 9080
    - name: "9443"
      port: 9443
      targetPort: 9443
    - name: "8118"
      port: 8118
      targetPort: 8118
  selector:
    app: rtorrentvpn   
status:
  loadBalancer: {}
